Minor update
